--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -85,7 +85,8 @@ body {
         width: 100%;
         height: calc(#{$contactHeight} * 2.5);
         z-index: 1;
-        background-image: linear-gradient(to bottom, white 20%, transparent 80%);
+        background-image: linear-gradient(to bottom, white 20%, rgba(255,255,255,0) 80%);
+        background-image: -webkit-linear-gradient(to bottom, white 20%, rgba(255,255,255,0) 80%);
     }
 
     .banner {
