--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -15,9 +15,6 @@ body {
     font-family: 'Montserrat', sans-serif;
 
     .text-content {
-        h1 {
-            margin-left: -2rem;
-        }
         span {
             padding-left: 5px;
             font-size: 1em;
@@ -33,8 +30,18 @@ body {
         }
 
         .highlight-color {
+            margin-left: -2rem;
             font-size: 2em;
             color: $highlightFont;
+        }
+
+        .bold-title {
+            font-size: 3em;
+            margin-left: 10px;
+            margin-top: -0.6em;
+            padding: 4px 8px;
+            background: $highlightFont;
+            color: white;
         }
 
         & > p {
@@ -64,6 +71,10 @@ body {
         &:hover {
             cursor: pointer;
             text-decoration-color: $highlightFont;
+        }
+
+        &:visited, &:active {
+            color: black;
         }
     }
 }
