--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -14,6 +14,10 @@ body {
     min-height: 100vh;
     font-family: 'Montserrat', sans-serif;
 
+    h1 {
+        font-size: 1.5rem;
+    }
+
     .text-content {
         span {
             padding-left: 5px;
@@ -29,10 +33,27 @@ body {
             }
         }
 
+        .title-font {
+            font-family: 'Just Me Again Down Here', cursive;
+        }
+
         .highlight-color {
             margin-left: -2rem;
-            font-size: 2em;
+            font-size: 3em;
             color: $highlightFont;
+            position: relative;
+
+            &::after {
+                position: absolute;
+                content: '';
+                bottom: -5px;
+                left: 0px;
+                width: 100%;
+                height: 25px;
+                background: url('./assets/graphics/underline_swirl.png');
+                background-size: cover;
+                z-index: -10;
+            }
         }
 
         .bold-title {
@@ -479,13 +500,14 @@ body {
         justify-content: space-around;
         & > div {
             align-self: flex-start;
-            width: 40%;
+            width: 45%;
+            margin-top: -3em;
         }
         form {
             align-self: flex-end;
             display: flex;
             flex-direction: column;
-            width: 40%;
+            width: 45%;
 
             & > input, & > textarea {
                 margin-bottom: 1rem;
@@ -784,6 +806,7 @@ body {
 
     div a {
         color: black;
+        text-decoration: none;
     }
 }
 
