--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -52,35 +52,15 @@ body {
             font-size: 3rem;
             color: $highlightFont;
             position: relative;
-            
-            &::after {
-                position: absolute;
-                content: '';
-                top: 55%;
-                left: 0px;
-                width: 100%;
-                height: 15px;
-                background-image: url('./assets/graphics/underline_swirl.png');
-                background-size: cover;
-                z-index: -10;
-            }
         }
 
         .larger-title {
             font-size: 4rem;
         }
-        
-        & > p {
-            margin: 1rem 0;
-        }
     }
 
     div h2 {
         margin-top: 3rem;
-    }
-
-    .intro {
-        margin-bottom: 1em;
     }
 
     .inline-link {
@@ -515,7 +495,9 @@ body {
             width: 45%;
 
             & > input, & > textarea {
+                font-family: 'Montserrat', sans-serif;
                 margin-bottom: 1rem;
+                font-size: 1em;
                 outline: none;
                 border-top-left-radius: 10px;
                 border-bottom-right-radius: 10px;
@@ -802,7 +784,6 @@ body {
     padding: 1.5rem 0;
     margin: 4rem auto 0;
     width: calc(100% - 90px);
-    border-top: 1px solid $darkmode-bg-color;
     color: black;
 
     div:first-child {
@@ -913,10 +894,6 @@ body {
             .highlight-color {
                 margin-left: 0rem;
                 font-size: 1em;
-
-                &::after {
-                    // bottom: -10px;
-                }
             }
 
             .larger-title {
@@ -978,6 +955,13 @@ body {
 
         .footer {
             margin: 2rem auto 0;
+            width: 100vw;
+            color: white;
+            background: $darkmode-menu-color;
+
+            a {
+                color: white;
+            }
         }
     }
 
@@ -1267,7 +1251,6 @@ body {
 
     .footer {
         color: white;
-        border-top: 1px solid white;
         a {
             color: white;
         }
