--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -776,23 +776,63 @@ body {
 }
 
 .footer {
-    position: relative;
+    position: fixed;
+    bottom: 0;
+    right: -95vw;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    margin-top: 1rem;
     padding: 1.5rem 0;
-    margin: 4rem auto 0;
-    width: calc(100% - 90px);
-    color: black;
+    width: 100vw;
+    background: $darkmode-menu-color;
+    color: white;
+    clip-path: polygon(5% 0, 100% 0, 100% 100%, 0 100%);
+    transition: right 400ms ease-in-out, clip-path 400ms ease-in-out;
+    outline: 1px solid white;
+    z-index: 10;
 
-    div:first-child {
-        margin-bottom: 1em;
+    &::before {
+        content: '';
+        background-image: url('./assets/graphics/info-icon.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+        position: absolute;
+        left: 35px;
+        bottom: 10px;
+        width: 25px;
+        height: 25px;
+    }
+    
+    &:hover {
+        right: 0;
+        clip-path: none;
+        &::before {
+            visibility: hidden;
+        }
     }
 
-    div a {
-        color: black;
-        text-decoration: none;
+    div:last-child {
+        display: flex;
+
+        span:first-child {
+            position: relative;
+            margin-right: 2em;
+
+            &::after {
+                content: '';
+                background-color: $highlightFont;
+                position: absolute;
+                right: -1em;
+                top: 0;
+                width: 2px;
+                height: 100%;
+            }
+        }
+        a {
+            color: white;
+            text-decoration: none;
+        }
     }
 }
 
@@ -952,17 +992,6 @@ body {
                 }
             }
         }
-
-        .footer {
-            margin: 2rem auto 0;
-            width: 100vw;
-            color: white;
-            background: $darkmode-menu-color;
-
-            a {
-                color: white;
-            }
-        }
     }
 
     .menu-container {
@@ -1045,6 +1074,40 @@ body {
         -moz-user-select: none;
         -ms-user-select: none;
         -webkit-tap-highlight-color: transparent;
+    }
+
+    .footer {
+        position: relative;
+        margin: 2rem auto 0;
+        color: white;
+        background: $darkmode-bg-color;
+        flex-direction: column;
+        right: 0;
+        width: 100vw;
+        clip-path: none;
+
+        &::before {
+            display: none;
+        }
+
+        a {
+            color: white;
+        }
+
+        div:last-child {
+            margin-top: 0.5em;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            span:first-child {
+                margin: 0;
+
+                &::after {
+                    display: none;
+                }
+            }
+        }
     }
 }
 
