--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -712,16 +712,32 @@ body {
             display: flex;
             justify-content: center;
             align-items: center;
-            background: rgba(0,0,0,0.05);
-            border: 1px solid black;
+            background-color: rgba(0,0,0,0.05);
+            outline: 1px solid $highlightFont;
+            outline-offset: -1px;
+            // border: 1px solid black;
             padding: 1em;
             color: black;
             text-align: center;
             text-decoration: none;
-
+            position: relative;
+            
             &:hover {
-                background: rgba(0,0,0,0.8);
-                color: pink;
+                outline-offset: 4px;
+                outline: 1px solid white;
+                background-color: rgba($highlightFont, 0.3);
+                transition: outline-offset 200ms ease-out, outline 200ms ease-in-out 100ms;
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                    width: 100%;
+                    height: 1px;
+                    background-color: $highlightFont;
+                    transition: background-color 200ms ease 300ms;
+                }
             }
         }
     }
