--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -57,6 +57,10 @@ body {
         .larger-title {
             font-size: 4rem;
         }
+
+        .first-para {
+            margin-top: -1em;
+        }
     }
 
     div h2 {
@@ -734,9 +738,8 @@ body {
                     left: 0;
                     bottom: 0;
                     width: 100%;
-                    height: 1px;
+                    height: 4px;
                     background-color: $highlightFont;
-                    transition: background-color 200ms ease 300ms;
                 }
             }
         }
@@ -801,6 +804,7 @@ body {
     margin-top: 1rem;
     padding: 1.5rem 0;
     width: 100vw;
+    height: 5vw;
     background: $darkmode-menu-color;
     color: white;
     clip-path: polygon(5% 0, 100% 0, 100% 100%, 0 100%);
@@ -812,18 +816,31 @@ body {
         content: '';
         background-image: url('./assets/graphics/info-icon.png');
         background-size: contain;
+        background-position: center;
         background-repeat: no-repeat;
         position: absolute;
-        left: 35px;
-        bottom: 10px;
-        width: 25px;
-        height: 25px;
+        left: 2.5vw;
+        bottom: 0.9vw;
+        width: 2vw;
+        height: 2vw;
     }
+
+    // &::after {
+    //     content: '';
+    //     position: absolute;
+    //     left: 0;
+    //     top: 0;
+    //     width: 1px;
+    //     height: 1px;
+    //     border: 7vh solid rgba(0,0,0,0);
+    //     border-top: 7vh solid white;
+    //     border-left: 7vh solid white;
+    // }
     
     &:hover {
         right: 0;
         clip-path: none;
-        &::before {
+        &::before, &::after {
             visibility: hidden;
         }
     }
@@ -833,6 +850,7 @@ body {
 
         span:first-child {
             position: relative;
+            margin-top: 0.05em;
             margin-right: 2em;
 
             &::after {
@@ -1230,10 +1248,6 @@ body {
 }
 
 @media screen and (min-width: 3000px) {
-
-    body {
-        font-size: 2.5rem;
-    }
 
     .header {
         .banner {
