Styled description scrollbar for both dark and light mode

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1334,6 +1334,10 @@ body {
             &:hover {
                 border: none;
             }
+
+            .simplebar-scrollbar::before {
+                background-color: white;
+            }
         }
 
         .image-container {
