Fixed colour of project-description border

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -975,7 +975,7 @@ body {
 
             .project-description {
                 height: 4.2rem;
-                border-bottom: 0.5rem solid rgb(243, 239, 239);
+                border-bottom: 0.5rem solid rgba(243, 239, 239, 0);
 
                 &:hover {
                     margin: 0;
