Changed sizing and position of footer bar

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,5 +8,7 @@ $burger-dimensions: 40px;
 $menu-width: 220px;
 $image-height: 400px;
 $contactHeight: 3rem;
+$lightmode-font-color: white;
+$lightmode-bg-color: rgb(230, 223, 223);
 $darkmode-bg-color: rgb(27, 24, 46);
 $darkmode-menu-color: rgb(23, 24, 26);
