--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -17,7 +17,7 @@ html {
 body {
     min-height: 100vh;
     font-family: 'Montserrat', sans-serif;
-    background-color: rgb(230, 223, 223);
+    background-color: $lightmode-bg-color;
 
     h1 {
         font-size: 1.5rem;
@@ -112,8 +112,8 @@ body {
         width: 100%;
         height: calc(#{$contactHeight} * 2.5);
         z-index: 1;
-        background-image: linear-gradient(to bottom, rgb(230, 223, 223) 20%, rgba(255,255,255,0) 80%);
-        background-image: -webkit-linear-gradient(to bottom, rgb(230, 223, 223) 20%, rgba(255,255,255,0) 80%);
+        background-image: linear-gradient(to bottom, $lightmode-bg-color 20%, rgba(255,255,255,0) 80%);
+        background-image: -webkit-linear-gradient(to bottom, $lightmode-bg-color 20%, rgba(255,255,255,0) 80%);
     }
 
     .banner {
@@ -127,7 +127,7 @@ body {
         height: 2.5vw;
         max-height: calc(#{$contactHeight} * 1.5);
         padding: 0;
-        color: white;
+        color: $lightmode-font-color;
         background: $darkmode-bg-color;
         clip-path: polygon(0.75% 0, 100% 0, 100% 100%, 0 100%);
         z-index: 2;
@@ -141,7 +141,7 @@ body {
             cursor: pointer;
             &::before {
                 content: '';
-                background: rgb(230, 223, 223);
+                background: $lightmode-bg-color;
                 position: absolute;
                 top: -20%;
                 right: -5%;
@@ -326,17 +326,17 @@ body {
 
         &:checked {
             & + .burger-menu div {
-                background-color: rgb(230, 223, 223);
+                background-color: $lightmode-bg-color;
                 transform: rotate(225deg);
                 &::after {
-                    background-color: rgb(230, 223, 223);
+                    background-color: $lightmode-bg-color;
                     top: 0;
                     transform: rotate(90deg);
                 }
 
                 &::before {
                     top: 0;
-                    background-color: rgb(230, 223, 223);
+                    background-color: $lightmode-bg-color;
                 }
             }
 
@@ -443,7 +443,7 @@ body {
             position: relative;
             font-size: 2em;
             margin-right: 1em;
-            background: rgb(230, 223, 223);
+            background: $lightmode-bg-color;
             padding: 0 5px;
             &::before, &::after {
                 content: '';
@@ -513,7 +513,7 @@ body {
                 border-bottom-right-radius: 10px;
                 border: none;
                 background: rgba($darkmode-bg-color, 0.85);
-                border: 1px solid rgb(230, 223, 223);
+                border: 1px solid $lightmode-bg-color;
                 color: white;
                 padding: 0.5rem;
 
@@ -681,7 +681,7 @@ body {
 
     .image-container {
         position: relative;
-        background-color: rgb(230, 223, 223);
+        background-color: $lightmode-bg-color;
         margin-bottom: 0.5rem;
         z-index: 0;
         cursor: pointer;
@@ -726,7 +726,6 @@ body {
             background-color: rgba(0,0,0,0.05);
             outline: 1px solid $highlightFont;
             outline-offset: -1px;
-            // border: 1px solid black;
             padding: 1em;
             color: black;
             text-align: center;
@@ -745,7 +744,7 @@ body {
                     left: 0;
                     bottom: 0;
                     width: 100%;
-                    height: 4px;
+                    height: 3px;
                     background-color: $highlightFont;
                 }
             }
@@ -804,18 +803,17 @@ body {
 .footer {
     position: fixed;
     bottom: 0;
-    right: -95vw;
+    right: calc(-100vw + 4em);
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin-top: 1rem;
     padding: 1.5em 0;
     width: 100vw;
-    height: 5vw;
-    max-height: 150px;
+    height: 4em;
     background: $darkmode-menu-color;
     color: white;
-    clip-path: polygon(5% 0, 100% 0, 100% 100%, 0 100%);
+    clip-path: polygon(4em 0, 100% 0, 100% 100%, 0 100%);
     transition: right 400ms ease-in-out, clip-path 400ms ease-in-out;
     outline: 1px solid rgb(243, 239, 239);
     z-index: 10;
@@ -827,10 +825,10 @@ body {
         background-position: center;
         background-repeat: no-repeat;
         position: absolute;
-        left: 2.5vw;
-        bottom: 0.9vw;
-        width: 2vw;
-        height: 2vw;
+        left: 2em;
+        bottom: 0.5em;
+        width: 2em;
+        height: 2em;
     }
 
     &:hover {
@@ -1158,7 +1156,7 @@ body {
     }
 
     .main::before {
-        background-image: linear-gradient(to bottom, white 55%, transparent 100%);
+        background-image: linear-gradient(to bottom, $lightmode-bg-color 55%, transparent 100%);
     }
 
     .header {
@@ -1284,7 +1282,7 @@ body {
     .menu-container .burger-menu > div,
     .menu-container .burger-menu > div::before,
     .menu-container .burger-menu > div::after {
-        background: rgb(230, 223, 223);
+        background: $lightmode-bg-color;
     }
 
     #snake, a {
