--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -390,6 +390,7 @@ body {
     min-height: 100vh;
     width: calc(100vw - ((#{$menu-width} + 15vw) / 2));
     margin-left: calc((#{$menu-width} + 15vw) / 2);
+    padding-bottom: 4em;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -412,7 +413,7 @@ body {
     height: 100%;
     width: 100%;
     margin-top: calc(#{$contactHeight} * 1.4);
-    padding-top: calc(#{$contactHeight} * 1.2);
+    padding-top: calc(#{$contactHeight} * 0.5);
     overflow-x: hidden;
 
     & > .text-content {
