Updated About page content and moved colour of fader background into a variable 'fader-bg-color'

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,7 @@ $menu-width: 220px;
 $image-height: 400px;
 $contactHeight: 3rem;
 $lightmode-font-color: white;
-$lightmode-bg-color: rgb(230, 223, 223);
+$lightmode-bg-color: rgb(241, 240, 240);
 $darkmode-bg-color: rgb(27, 24, 46);
 $darkmode-menu-color: rgb(23, 24, 26);
+$fader-bg-color: rgb(235, 226, 232);
