--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -495,11 +495,12 @@ body {
     .experience-links {
         display: flex;
         flex-direction: row;
-        width: 60%;
-        justify-content: space-around;
+        width: 100%;
+        justify-content: center;
         margin: 0 auto;
 
-        a {
+        .experience-buttons {
+            margin: 0 1.5em;
             padding: 0.5em 1em;
             text-decoration: none;
             border-radius: 10px;
@@ -900,6 +901,14 @@ body {
 @media screen and (max-width: 350px) {
     .logo {
         width: 0;
+    }
+
+    .about-container .experience-links {
+        // flex-direction: column;
+        flex-wrap: wrap;
+        .experience-buttons {
+            margin: 0.5em 1em;
+        }
     }
 }
 
